fixed blog tags not wrapping properly

--- a/src/styles/Content.css
+++ b/src/styles/Content.css
@@ -47,7 +47,9 @@
 
 .content-tags {
   margin-top: 40px;
-  display: block;
+  display: flex;
+  flex-wrap: wrap;
+  gap: 10px;
 }
 
 .content-tags span {
@@ -56,7 +58,6 @@
   border-radius: 5px;
   color: #f5efe6;
   font-size: 11px;
-  margin-right: 10px;
   cursor: pointer;
 }
 
@@ -69,6 +70,7 @@
 @media screen and (max-width: 560px) {
   .content {
     margin: 0 10px 10px;
+    padding: 15px;
   }
 
   .content h1 {
